adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere praesentium pariatur quam voluptatem a numquam commodi beatae? Ducimus atque quam vel tempora eum accusamus, sequi minima, laborum deleniti cum dicta.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni nulla velit molestiae ipsa quidem aliquam? Provident eaque, saepe nobis error minima unde dicta quae, repellendus enim doloribus nostrum eveniet ut!</p>
 </body>
 </html>
